package com.example.pdm2324i_gomoku_g37.helpers


object MainScreenTestTags {
    const val MainScreenDisplayTestTag = "MainScreenDisplayTestTag"
    const val StartButtonTestTag = "StartButtonTestTag"
}

object HomeScreenTestTags {
    const val HomeScreenDisplayTestTag = "HomeScreenDisplayTestTag"
}

object AuthorsScreenTestTags {
    const val AuthorCardTestTag = "AuthorCardTestTag"
    const val AuthorNoAuthorTestTag = "AuthorNoAuthorTestTag"
    const val AuthorNextTestTag = "AuthorFetchNextTestTag"
    const val AuthorPrevTestTag = "AuthorFetchPrevTestTag"
    const val AuthorEmailButtonTestTag = "AuthorEmailTestTag"
    const val AuthorFetchAuthorsErrorTag = "AuthorFetchAuthorsErrorTag"
}

object ComponentsTestTags {
    const val LoadingAlertTestTag = "LoadingAlertTestTag"
}

// This object contains the tags used in the LoginScreen
object LoginScreenTestTags {
    const val LoginScreenTestTag = "LoginScreenTestTag"
    const val SignUpButtonTestTag = "SignUpButtonTestTag"
    const val UsernameInputTestTag = "UsernameInputTestTag"
    const val PasswordInputTestTag = "PasswordInputTestTag"
}

// This object contains the tags used in the SignUpScreen
object SignUpScreenTestTags {
    const val SignUpScreenTestTag = "SignUpScreenTestTag"
}

object GameScreenTestTags {
    const val GameScreenBoardTestTag = "GameScreenBoardTestTag"
    const val GameScreenClickableCellTestTag = "GameScreenClickableCellTestTag"
}

object InfoScreenTestTags {
    const val InfoFetchInfoErrorTag = "InfoFetchInfoErrorTag"
}

